--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
 		"source": "https://github.com/Axelandre42/UserCoreBundle"
 	},
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+		"php": "^5.5.9 || ^7.0",
+		"symfony/framework-bundle": "^v3.3.9",
+		"symfony/security-bundle": "^v3.3.9",
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^6.0"
+	}
 }
