--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
 		"php": "^5.5.9 || ^7.0",
 		"symfony/framework-bundle": "^v3.3.9",
-		"symfony/security-bundle": "^v3.3.9",
+		"symfony/security-bundle": "^v3.3.9"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.0"
